--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
-numpy
-matplotlib.pyplot
-IPython.display
-IPython.core.display
-mpl_toolkits.mplot3
+numpy>=1.26.4
+matplotlib.pyplot>=3.10.7
+IPython
+mpl_toolkits
 statistics
 ipywidgets
 nbconvert
-scipy.integrate
+scipy
 datetime
-reportlab.lib
+reportlab
 openpyxl
